<resources>
    <string name="app_name">Type Tap Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_statistics">Stats</string>
    <string name="str_play">Play!</string>
    <string name="str_quit">Quit</string>
    <string name="str_restart">Restart</string>
    <string name="str_add_a_new_profile">Add a new profile</string>
    <string name="str_bio">Bio</string>
    <string name="str_save_a_new_profile">Save a new profile</string>
    <string name="str_type_here">Type here</string>
    <string name="str_user_avatar">User Avatar</string>
    <string name="str_theme">Theme:</string>
    <string name="str_avatar">Avatar:</string>
    <string name="str_current_stats">Current Stats:</string>
    <string name="str_profiles">Profiles</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_view_profile">View Profile</string>
    <string name="str_leaderboard">Leaderboard</string>
    <string name="str_name">Name</string>
    <string name="str_high_score">High Score</string>
    <string name="str_total_words">Total Words</string>
    <string name="str_name_prompt">Please enter a username</string>
    <string name="str_ok">OK</string>
    <string name="str_set_current_profile">Set as current profile?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_current_profile">Current Profile</string>
    <string name="str_most_recent_score">Most recent score: </string>
    <string name="str_wpm">wpm</string>
    <string name="str_high_score_output">High Score: %s wpm</string>
    <string name="str_total_words_output">Total Words Typed: %s </string>
    <string name="str_average_speed_output">Average Speed: %s wpm</string>
    <string name="str_action_switch_user">Switch User</string>
    <string name="str_dialog_switch_yes">Yes</string>
    <string name="str_dialog_switch_no">No</string>
    <string name="str_dialog_switch_message">Log out and log in with another account?</string>
    <string name="str_loading">Loading...</string>
    <string name="str_background">Background</string>
    <string name="str_deleting">Deleting...</string>
    <string name="str_delete_profile">Deleting Profile</string>
    <string name="str_global">Global</string>
    <string name="str_selected_user">Selected user</string>
    <string name="str_loading_1">Loading.</string>
    <string name="str_loading_2">Loading..</string>
    <string name="str_loading_3">Loading...</string>
    <string name="str_type">Type...</string>
    <string name="str_tap">Tap..</string>
    <string name="str_go">GO!</string>
    <string name="str_user_name">User name</string>
    <string name="str_user_biography">User biography</string>
</resources>