<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.HomeFragment">

    <ImageView
        android:id="@+id/img_home_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/str_background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The contrast warning appears to be a false positive.-->
    <Button
        android:id="@+id/btn_home_profiles"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/str_profiles"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <!-- The contrast warning appears to be a false positive.-->
    <Button
        android:id="@+id/btn_home_play"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/str_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_statistics"
        app:layout_constraintStart_toEndOf="@+id/btn_home_profiles"
        tools:ignore="TextContrastCheck" />

    <!-- The contrast warning appears to be a false positive.-->
    <Button
        android:id="@+id/btn_home_statistics"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/str_statistics"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_temp_home"
        android:layout_width="368dp"
        android:layout_height="278dp"
        android:contentDescription="@string/str_background"
        android:scaleType="centerCrop"
        android:src="@drawable/img_ttg_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_most_recent_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_temp_home" />

</androidx.constraintlayout.widget.ConstraintLayout>