<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/loadingFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="applicationOuter.group1.typetapgo.ui.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_profilesFragment"
            app:destination="@id/profilesFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_homeFragment_to_leaderBoardFragment"
            app:destination="@id/leaderBoardFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_startGameFragment"
            app:destination="@id/startGameFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_loadingFragment"
            app:destination="@id/loadingFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="applicationOuter.group1.typetapgo.ui.GameFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_to_startGameFragment"
            app:destination="@id/startGameFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/startGameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profilesFragment"
        android:name="applicationOuter.group1.typetapgo.ui.ProfilesFragment"
        android:label="@string/str_profiles">
        <action
            android:id="@+id/action_profilesFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:launchSingleTop="false"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profilesFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_profilesFragment_to_viewProfileFragment"
            app:destination="@id/viewProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_profilesFragment_self"
            app:destination="@id/profilesFragment"
            app:popUpTo="@id/profilesFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="applicationOuter.group1.typetapgo.ui.EditProfileFragment"
        android:label="@string/str_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_profilesFragment"
            app:destination="@id/profilesFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/profilesFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="index"
            app:argType="integer" />
        <action
            android:id="@+id/action_editProfileFragment_to_viewProfileFragment"
            app:destination="@id/viewProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/viewProfileFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/viewProfileFragment"
        android:name="applicationOuter.group1.typetapgo.ui.ViewProfileFragment"
        android:label="@string/str_view_profile"
        tools:layout="@layout/fragment_view_profile" >
        <action
            android:id="@+id/action_viewProfileFragment_to_profilesFragment"
            app:destination="@id/profilesFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/profilesFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="index"
            app:argType="integer" />
        <action
            android:id="@+id/action_viewProfileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/leaderBoardFragment"
        android:name="applicationOuter.group1.typetapgo.ui.LeaderBoardFragment"
        android:label="@string/str_leaderboard"
        tools:layout="@layout/fragment_leader_board" >
        <action
            android:id="@+id/action_leaderBoardFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/startGameFragment"
        android:name="applicationOuter.group1.typetapgo.ui.StartGameFragment"
        tools:layout="@layout/fragment_start_game" >
        <action
            android:id="@+id/action_startGameFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loadingFragment"
        android:name="applicationOuter.group1.typetapgo.ui.LoadingFragment"
        android:label="fragment_loading"
        tools:layout="@layout/fragment_loading" >
        <action
            android:id="@+id/action_loadingFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>